crates/analyzer/tests/snapshots/analysis__return_gte_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_gte_i256.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_gte_i256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: i256, y: i256) -> bool:
3 │ │         return x >= y
  │ ╰─────────────────────^ attributes hash: 10078605265406793117
  │  
  = FunctionSignature {
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Bool,
            ),
        ),
    }

note: 
  ┌─ features/return_gte_i256.fe:3:16
  │
3 │         return x >= y
  │                ^ i256: Value => None

note: 
  ┌─ features/return_gte_i256.fe:3:21
  │
3 │         return x >= y
  │                     ^ i256: Value => None

note: 
  ┌─ features/return_gte_i256.fe:3:16
  │
3 │         return x >= y
  │                ^^^^^^ bool: Value => None


