crates/analyzer/tests/snapshots/analysis__return_i128_cast.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_i128_cast.fe:2:5
  │  
2 │ ╭     pub fn bar() -> i128:
3 │ │         return i128(-3)
  │ ╰───────────────────────^ attributes hash: 155533728466856391
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    I128,
                ),
            ),
        ),
    }

note: 
  ┌─ return_i128_cast.fe:3:22
  │
3 │         return i128(-3)
  │                      ^ u256: Value

note: 
  ┌─ return_i128_cast.fe:3:21
  │
3 │         return i128(-3)
  │                     ^^ i128: Value

note: 
  ┌─ return_i128_cast.fe:3:16
  │
3 │         return i128(-3)
  │                ^^^^^^^^ i128: Value


