crates/analyzer/tests/snapshots/analysis__return_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_i256.fe:2:5
  │  
2 │ ╭     pub fn bar() -> i256 {
3 │ │         return -3
4 │ │     }
  │ ╰─────^ attributes hash: 8116994679119332188
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [],
        return_type: Ok(
            Base(
                Numeric(
                    I256,
                ),
            ),
        ),
    }

note: 
  ┌─ return_i256.fe:3:17
  │
3 │         return -3
  │                 ^ u256: Value

note: 
  ┌─ return_i256.fe:3:16
  │
3 │         return -3
  │                ^^ i256: Value


