crates/analyzer/tests/snapshots/analysis__return_identity_u128.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_identity_u128.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u128) -> u128 {
3 │ │         return x
4 │ │     }
  │ ╰─────^ attributes hash: 9479837514185375791
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [
            FunctionParam {
                is_mut: false,
                label: None,
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U128,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U128,
                ),
            ),
        ),
    }

note: 
  ┌─ return_identity_u128.fe:3:16
  │
3 │         return x
  │                ^ u128: Value


