crates/analyzer/tests/snapshots/analysis__return_identity_u16.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_identity_u16.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_identity_u16.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u16) -> u16:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 296602306239352294
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U16,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U16,
                ),
            ),
        ),
    }

note: 
  ┌─ features/return_identity_u16.fe:3:16
  │
3 │         return x
  │                ^ u16: Value => None


