crates/analyzer/tests/snapshots/analysis__return_identity_u64.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_identity_u64.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u64) -> u64 {
3 │ │         return x
4 │ │     }
  │ ╰─────^ attributes hash: 14360693544116809530
  │  
  = FunctionSignature {
        self_decl: None,
        ctx_decl: None,
        params: [
            FunctionParam {
                label: None,
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U64,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U64,
                ),
            ),
        ),
    }

note: 
  ┌─ return_identity_u64.fe:3:16
  │
3 │         return x
  │                ^ u64: Value


