crates/analyzer/tests/snapshots/analysis__return_identity_u8.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(\"features/return_identity_u8.fe\", &src, module, &db)"

---
note: 
  ┌─ features/return_identity_u8.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u8) -> u8:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 1075048652628918227
  │  
  = FunctionSignature {
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            U8,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Numeric(
                    U8,
                ),
            ),
        ),
    }

note: 
  ┌─ features/return_identity_u8.fe:3:16
  │
3 │         return x
  │                ^ u8: Value => None


