crates/analyzer/tests/snapshots/analysis__return_lt_i256.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_lt_i256.fe:2:5
  │  
2 │ ╭     pub fn bar(x: i256, y: i256) -> bool:
3 │ │         return x < y
  │ ╰────────────────────^ attributes hash: 211782109501053014
  │  
  = FunctionSignature {
        self_decl: None,
        params: [
            FunctionParam {
                name: "x",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
            FunctionParam {
                name: "y",
                typ: Ok(
                    Base(
                        Numeric(
                            I256,
                        ),
                    ),
                ),
            },
        ],
        return_type: Ok(
            Base(
                Bool,
            ),
        ),
    }

note: 
  ┌─ return_lt_i256.fe:3:16
  │
3 │         return x < y
  │                ^   ^ i256: Value
  │                │    
  │                i256: Value

note: 
  ┌─ return_lt_i256.fe:3:16
  │
3 │         return x < y
  │                ^^^^^ bool: Value


