crates/analyzer/tests/snapshots/analysis__return_lt_u128.snap
---
source: crates/analyzer/tests/analysis.rs
expression: "build_snapshot(&db, module)"

---
note: 
  ┌─ return_lt_u128.fe:2:5
  │  
2 │ ╭     pub fn bar(x: u128, y: u128) -> bool {
3 │ │         return x < y
4 │ │     }
  │ ╰─────^ params: [{ label: None, name: x, typ: u128 }, { label: None, name: y, typ: u128 }] -> bool

note: 
  ┌─ return_lt_u128.fe:3:16
  │
3 │         return x < y
  │                ^   ^ u128
  │                │    
  │                u128

note: 
  ┌─ return_lt_u128.fe:3:16
  │
3 │         return x < y
  │                ^^^^^ bool


